<b>New Features:</b>
<br></br><br></br>
- Added option to update logic
- Added option to feed your own logic to the randomizer
- 2 new traps have been added to the trap-sanity pool

<b>Changes:</b>
<br></br><br></br>
- The final Trendy prize is now set to junk by default

<b>Bug Fixes:</b>
<br></br><br></br>
- Fixed issue with reloading a save after completing the Rapids Race