@@ -2,12 +2,16 @@
 <br></br><br></br>
 - Added option to update logic
 - Added option to feed your own logic to the randomizer
+- Added Rooster logic to dungeons when allowed inside
 - 2 new traps have been added to the trap-sanity pool
 
 <b>Changes:</b>
 <br></br><br></br>
 - The final Trendy prize is now set to junk by default
+- The spoiler log now lists every trap as "trap"
 
 <b>Bug Fixes:</b>
 <br></br><br></br>
 - Fixed issue with reloading a save after completing the Rapids Race
+- Fixed issue where powder-capacity would directly give Magic Powder
+- Fixed softlock from entering water caves early with the Rooster
